Alterando configuração