@@ -1,9 +1,8 @@
 package com.jan1ooo.agenda.domain.service;
 
-import com.jan1ooo.agenda.domain.dto.AgendaDto;
-import com.jan1ooo.agenda.domain.dto.PacienteDto;
-import com.jan1ooo.agenda.domain.dto.mapper.AgendaMapper;
-import com.jan1ooo.agenda.domain.dto.request.AgendaRequest;
+import com.jan1ooo.agenda.domain.entity.agenda.AgendaDto;
+import com.jan1ooo.agenda.domain.entity.mapper.AgendaMapper;
+import com.jan1ooo.agenda.domain.entity.request.AgendaRequest;
 import com.jan1ooo.agenda.domain.repository.AgendaRepository;
 import com.jan1ooo.agenda.exception.BusinessException;
 import com.jan1ooo.agenda.exception.RecordNotFoundException;
@@ -12,16 +11,12 @@ import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.InvalidDataAccessApiUsageException;
-import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.MethodArgumentNotValidException;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @Transactional
@@ -32,7 +27,7 @@ public class AgendaService {
     private final AgendaMapper mapper;
 
     public List<AgendaDto> findAll(){
-        return repository.findAll().stream().map(mapper::toDto).toList();
+        return repository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
     }
 
     public AgendaDto findById(@Positive Long id){
